--- a/chatbot_test.template
+++ b/chatbot_test.template
@@ -1,6 +1,9 @@
 {% block %}
 	{% client %}(do you know about|who is|what is) (?P<query>.*){% endclient %}
 	{% response %}{% call wiki: %query %}{% endresponse %}
+{% endblock %}
+
+{% block %}
     {% client %}(how is the weather in|weather in) (?P<city>.*){% endclient %}
     {% response %}{% call weather: %city %}{% endresponse %}
 {% endblock %}
